fix dots in third practice

--- a/prac03/prac03.html
+++ b/prac03/prac03.html
@@ -13140,10 +13140,10 @@ width=400
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Определение 1.</strong> Система множеств $S$ называется <strong>полукольцом</strong>, если:
-1) $\varnothing \in S$ (есть пустое множество, есть 0)
-2) $\forall A \in S$, $\forall B \in S$ -&gt; $A \cap B \in S$ (есть пересечение)
-3) $\forall A \in S$, $\forall A_1 \in S$, $A_1 \subset A$ -&gt; $\exists A_2, \ldots A_n \in S$ : $A_1 \sqcup A_2 \sqcup \ldots \sqcup A_n = A$ (есть разбиение)</p>
+<p><strong>Определение 1.</strong> Система множеств $S$ называется <strong>полукольцом</strong>, если:</p>
+<p>1) $\varnothing \in S$ (есть пустое множество, есть 0)</p>
+<p>2) $\forall A \in S$, $\forall B \in S$ -&gt; $A \cap B \in S$ (есть пересечение)</p>
+<p>3) $\forall A \in S$, $\forall A_1 \in S$, $A_1 \subset A$ -&gt; $\exists A_2, \ldots A_n \in S$ : $A_1 \sqcup A_2 \sqcup \ldots \sqcup A_n = A$ (есть разбиение)</p>
 
 </div>
 </div>
@@ -13153,9 +13153,9 @@ width=400
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Определение 2.</strong> Непустая система множеств R называется <strong>кольцом</strong>, если:</p>
 <ol>
-<li>$\forall A \in R$, $\forall B \in R$ -&gt; $A \cap B \in R$
-2) $\forall A \in R$, $\forall B \in R$ -&gt; $A \bigtriangleup B \in R$ (симметричная разность, все кроме пересечения)</li>
+<li>$\forall A \in R$, $\forall B \in R$ -&gt; $A \cap B \in R$</li>
 </ol>
+<p>2) $\forall A \in R$, $\forall B \in R$ -&gt; $A \bigtriangleup B \in R$ (симметричная разность, все кроме пересечения)</p>
 
 </div>
 </div>
@@ -13163,9 +13163,9 @@ width=400
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Определение 3.</strong> Множество X называется единицей системы множеств T, если:
-1) $X \in T$
-2) $\forall A \in T$ верно $A \cap X = A$</p>
+<p><strong>Определение 3.</strong> Множество X называется единицей системы множеств T, если:</p>
+<p>1) $X \in T$</p>
+<p>2) $\forall A \in T$ верно $A \cap X = A$</p>
 <p>Очевидно, такое название оправдывается ролью множества X при «умножении» (т. е. пересечении) множеств.</p>
 
 </div>
@@ -13182,9 +13182,9 @@ width=400
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Определение 5.</strong> Система множеств R называется <strong>$\sigma$-кольцом</strong>, если:
-1) $R$ — кольцо;
-2) $\forall A_1,\ldots ,A_n, \ldots \in R$ -&gt; $\bigcup_{i=1}^{\infty} A_i \in R$</p>
+<p><strong>Определение 5.</strong> Система множеств R называется <strong>$\sigma$-кольцом</strong>, если:</p>
+<p>1) $R$ — кольцо;</p>
+<p>2) $\forall A_1,\ldots ,A_n, \ldots \in R$ -&gt; $\bigcup_{i=1}^{\infty} A_i \in R$</p>
 <p>(Просто перешли от дискретного к счетному)</p>
 <p><strong>Определение 6.</strong> $\sigma$-кольцо множеств с единицей называется <strong>$\sigma$-алгеброй</strong> множеств.</p>
 
@@ -13309,10 +13309,15 @@ width=400
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>5)</strong> Доказать, что:
-1) (0.5) пересечение произвольной непустой системы колец является кольцом (возможно, состоящим лишь из пустого множества);
-2) (0.25) пересечение произвольной непустой системы σ-колец является σ-кольцом;
-3) (0.25) пересечение непустой системы алгебр с одной и той же единицей является алгеброй.</p>
+<p><strong>5)</strong> Доказать, что:</p>
+<ul>
+<li><p>(0.5) пересечение произвольной непустой системы колец является кольцом (возможно, состоящим лишь из пустого множества);</p>
+</li>
+<li><p>(0.25) пересечение произвольной непустой системы σ-колец является σ-кольцом;</p>
+</li>
+<li><p>(0.25) пересечение непустой системы алгебр с одной и той же единицей является алгеброй.</p>
+</li>
+</ul>
 
 </div>
 </div>
