add table of content

--- a/prac05/prac05.html
+++ b/prac05/prac05.html
@@ -13111,7 +13111,20 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1054;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1103;">&#1054;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1103;<a class="anchor-link" href="#&#1054;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1103;">&#182;</a></h2>
+<h2 id="&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#182;</a></h2><ul>
+<li><a href="#chapter1">Теория</a></li>
+<li><a href="#chapter2">Задачи на пару</a></li>
+<li><a href="#chapter3">Домашнее задание</a></li>
+<li><a href="#chapter4">Гробы</a></li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13163,7 +13176,7 @@ $$P(A|B) = \frac{P(B|A)P(A)}{P(B)}$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091;<a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;">&#182;</a></h2>
+<h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13230,7 +13243,7 @@ $$P(A|B) = \frac{P(B|A)P(A)}{P(B)}$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1044;&#1047;">&#1044;&#1047;<a class="anchor-link" href="#&#1044;&#1047;">&#182;</a></h2>
+<h2 id="&#1044;&#1047;-">&#1044;&#1047; <a class="anchor" id="chapter3" /><a class="anchor-link" href="#&#1044;&#1047;-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13283,7 +13296,7 @@ $P(A|B) =P(A|BC)P(C|B)+P(A|B\overline{C})P(\overline{C}|B).$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1043;&#1088;&#1086;&#1073;&#1099;">&#1043;&#1088;&#1086;&#1073;&#1099;<a class="anchor-link" href="#&#1043;&#1088;&#1086;&#1073;&#1099;">&#182;</a></h2>
+<h2 id="&#1043;&#1088;&#1086;&#1073;&#1099;-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#&#1043;&#1088;&#1086;&#1073;&#1099;-">&#182;</a></h2>
 </div>
 </div>
 </div>
