--- a/prac01/prac01.html
+++ b/prac01/prac01.html
@@ -13260,7 +13260,7 @@ $$P_n = n!$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>4)</strong> На плоскости, замощённой одинаковыми прямоугольниками со сторонами 10 и 20 (прямоугольники примыкают сторонами), рисуют случайную окружность радиуса 4. Найдите вероятность того, что окружность имеет общие точки ровно с тремя прямоугольниками.</p>
+<p><strong>4)</strong> На плоскости, замощённой одинаковыми прямоугольниками со сторонами 10 и 20 (прямоугольники примыкают сторонами, 10 к 10, 20 к 20), рисуют случайную окружность радиуса 4. Найдите вероятность того, что окружность имеет общие точки ровно с тремя прямоугольниками.</p>
 
 </div>
 </div>
@@ -13355,6 +13355,28 @@ $$P_n = n!$$</p>
 <li>вычислить эту вероятность при $r = h$;</li>
 <li>при каком отношении $r/h$ эта вероятность равна $1/4$?</li>
 </ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>8(0.5)</strong>
+Паша входит на станцию метро с кольцевым маршрутом. Ему нужно добраться до диаметрально противоположной станции, поэтому ему не важно на какой поезд садиться. Поезда приходят на станцию с равным интервалом в 1 час в каждую сторону. С какой вероятностью Паша сядет на один поезд или на другой поезд? (Можно считать, что поезда точки во времени и Паша садится в первую прибывшую точку на станцию)</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>9(1)</strong> 
+Есть две урны с шарами, $N$ черных шаров и $N$ белых шаров.
+Можно любым способом разложить шары по урнам.
+После того как шары разложены урны будут перемешаны. (не будет известно где какая)
+И будет предложено из любой урны вытащить один шар.
+Какая оптимальная стратегия по раскладке шаров по урнам что бы вытащить белый шар.</p>
 
 </div>
 </div>
