6th tasks for prac01-02 for freaks

--- a/prac01/prac01.html
+++ b/prac01/prac01.html
@@ -13221,6 +13221,14 @@ $$P_n = n!$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>6)</strong> Наудачу выбирается хорда окружности в единичной окружности. Посчитайте вероятность, что она меньше длины вписанного в эту окружность треугольника. (Парадокс Бертрана)</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <hr>
 
 </div>
