--- a/prac02/prac02.html
+++ b/prac02/prac02.html
@@ -13258,6 +13258,22 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>6)*</strong> Есть последовательность множеств $(A_i)_{i \in \mathcal{N}}$. Для последовательности множеств можно ввести понятие нижнего и верхнего предела следующим образом. 
+$$\underline{A} = \bigcup_{k \in \mathcal{N}} \bigcap_{i \ge k} A_i$$ 
+$$\overline{A} = \bigcap_{k \in \mathcal{N}} \bigcup_{i \ge k}A_i$$</p>
+<p>Найдите пределы для последовательностей:</p>
+<ul>
+<li>$\{0,1\}$, $\{1,2\}$, $\{0,1\}$, $\{1,2\}$, $\ldots$ </li>
+<li>$A_n = [0,1+\frac{(-1)^{n}}{n}]$</li>
+<li>$A_n = [0,\frac{1}{n}+(-1)^{n}]$</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1076;&#1086;&#1084;-(&#1082;&#1072;&#1078;&#1076;&#1072;&#1103;-&#1079;&#1072;&#1076;&#1072;&#1095;&#1072;-&#1087;&#1086;-1&#1073;)-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1076;&#1086;&#1084; (&#1082;&#1072;&#1078;&#1076;&#1072;&#1103; &#1079;&#1072;&#1076;&#1072;&#1095;&#1072; &#1087;&#1086; 1&#1073;) <a class="anchor" id="chapter3" /><a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1076;&#1086;&#1084;-(&#1082;&#1072;&#1078;&#1076;&#1072;&#1103;-&#1079;&#1072;&#1076;&#1072;&#1095;&#1072;-&#1087;&#1086;-1&#1073;)-">&#182;</a></h2>
 </div>
 </div>
