fix second prac

--- a/prac02/prac02.html
+++ b/prac02/prac02.html
@@ -13265,8 +13265,10 @@ $$\overline{A} = \bigcap_{k \in \mathcal{N}} \bigcup_{i \ge k}A_i$$</p>
 <ul>
 <li>$\{0,1\}$, $\{1,2\}$, $\{0,1\}$, $\{1,2\}$, $\ldots$ </li>
 <li>$A_n = [0,1+\frac{(-1)^{n}}{n}]$</li>
-<li>$A_n = [0,\frac{1}{n}+(-1)^{n}]$</li>
+<li>$A_n = [0,\frac{1}{n}+(-1)^{n} + 1]$</li>
 </ul>
+<p>Верхний предел последовательности множеств - множество, элементы которого принадлежат бесконечному числу множеств последовательности.</p>
+<p>Нижний предел последовательности множеств - множество, элементы которого принадлежат всем множествам последовательности, за исключением конечного их числа (то есть, начиная с некоторого n).</p>
 
 </div>
 </div>
