--- a/prac03/prac03.html
+++ b/prac03/prac03.html
@@ -13222,7 +13222,10 @@ $$\Omega = \{\omega_1, \ldots, \omega_n\}$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>3.</strong> В ходе эксперимента монетку подбрасывают бесконечное число раз. Пусть событие $A_i$ - в i-ом подбрасывании выпал орел ($i=1,2,\ldots$). Имеются два типа наблюдателей, $\textrm{Петры}$ и $\textrm{Николаи}$. $\textrm{Петр}_1$ видел все подбрасывания, начиная с первого, $\textrm{Петр}_2$ видел все подбрасывания, начиная со второго и тд. То есть $\textrm{Петр}_i$ видел все подбрасывания, начиная с i-ого. $\textrm{Николай}_1$ видел первое подбрасывание, а потом ушел, $\textrm{Николай}_2$ видел первое и второе подбрасывание, а потом ушел и т.д. То есть $\textrm{Николай}_i$ видел все подбрасывания до i-ого включительно, а остальные не видел. Обозначим $\sigma$- алгебру i-ого Петра $\mathcal{F}_i$, а $\sigma$-алгебру i-ого Николая $\mathcal{H}_i$.</p>
+<p><strong>3.</strong> В ходе эксперимента монетку подбрасывают бесконечное число раз. Пусть событие $A_i$ - в i-ом подбрасывании выпал орел ($i=1,2,\ldots$). Имеются два типа наблюдателей, $\textrm{Петры}$ и $\textrm{Николаи}$.</p>
+<p>$\textrm{Петр}_1$ видел все подбрасывания, начиная с первого, $\textrm{Петр}_2$ видел все подбрасывания, начиная со второго и тд. То есть $\textrm{Петр}_i$ видел все подбрасывания, начиная с i-ого.</p>
+<p>$\textrm{Николай}_1$ видел первое подбрасывание, а потом ушел, $\textrm{Николай}_2$ видел первое и второе подбрасывание, а потом ушел и т.д. То есть $\textrm{Николай}_i$ видел все подбрасывания до i-ого включительно, а остальные не видел.</p>
+<p>Обозначим $\sigma$- алгебру i-ого Петра $\mathcal{F}_i$, а $\sigma$-алгебру i-ого Николая $\mathcal{H}_i$.</p>
 <p>Задачи:</p>
 <p>0) Кого расстреляли?</p>
 <p>1) Выписать явно $\mathcal{H}_1$, $\mathcal{H}_2$</p>
