--- a/prac02/prac02.html
+++ b/prac02/prac02.html
@@ -13148,7 +13148,7 @@ div#notebook {
 <li>$\forall A \in R$, $\forall B \in R$ -&gt; $A \cap B \in R$</li>
 </ol>
 <p>2) $\forall A \in R$, $\forall B \in R$ -&gt; $A \bigtriangleup B \in R$ (симметричная разность, все кроме пересечения)</p>
-<p><strong>Пример:</strong> Все натуральные числа (кольцо без единицы)</p>
+<p><strong>Пример:</strong> $\{\varnothing, \{1\}, \{2\}, \{1,2\},\}$ (кольцо с единицей)</p>
 
 </div>
 </div>
@@ -13160,6 +13160,7 @@ div#notebook {
 <p>1) $X \in T$</p>
 <p>2) $\forall A \in T$ верно $A \cap X = A$</p>
 <p>Очевидно, такое название оправдывается ролью множества X при «умножении» (т. е. пересечении) множеств.</p>
+<p><strong>Пример:</strong> Все конечные множества состоящие из натуральных чисел (кольцо без единицы)</p>
 
 </div>
 </div>
@@ -13179,6 +13180,7 @@ div#notebook {
 <p>1) $R$ — кольцо;</p>
 <p>2) $\forall A_1,\ldots ,A_n, \ldots \in R$ -&gt; $\bigcup_{i=1}^{\infty} A_i \in R$</p>
 <p>(Просто перешли от дискретного к счетному)</p>
+<p><strong>Пример:</strong> Все счетные множества состоящие из вещественных чисел ($\sigma$-кольцо без единицы)</p>
 <p><strong>Определение 6.</strong> $\sigma$-кольцо множеств с единицей называется <strong>$\sigma$-алгеброй</strong> множеств.</p>
 
 </div>
