--- a/prac03/prac03.html
+++ b/prac03/prac03.html
@@ -13188,41 +13188,7 @@ $$\Omega = \{\omega_1, \ldots, \omega_n\}$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>2.</strong> Пусть монетку подбросили один раз. Исходом этого подбрасывания назовем параметр Z, который в зависомости от произошедшего события принимает определеное значение.</p>
-<table>
-<thead><tr>
-<th></th>
-<th>орел</th>
-<th>решке</th>
-<th>ребро</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>p</td>
-<td>0.49</td>
-<td>0.49</td>
-<td>0.02</td>
-</tr>
-<tr>
-<td>Z</td>
-<td>5</td>
-<td>7</td>
-<td>5</td>
-</tr>
-</tbody>
-</table>
-<p>Определить:</p>
-<p>1) минимальную $\sigma$-алгебру на пространстве элементарных исходов $\Omega$ ($\sigma$-алгебру наблюдателя)</p>
-<p>2) $\mathcal{F}$ - самую большую $\sigma$-алгебру на пространстве элементарных исходов $\Omega$</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>3.</strong> В ходе эксперимента монетку подбрасывают бесконечное число раз. Пусть событие $A_i$ - в i-ом подбрасывании выпал орел ($i=1,2,\ldots$). Имеются два типа наблюдателей, $\textrm{Петры}$ и $\textrm{Николаи}$.</p>
+<p><strong>2.</strong> В ходе эксперимента монетку подбрасывают бесконечное число раз. Пусть событие $A_i$ - в i-ом подбрасывании выпал орел ($i=1,2,\ldots$). Имеются два типа наблюдателей, $\textrm{Петры}$ и $\textrm{Николаи}$.</p>
 <p>$\textrm{Петр}_1$ видел все подбрасывания, начиная с первого, $\textrm{Петр}_2$ видел все подбрасывания, начиная со второго и тд. То есть $\textrm{Петр}_i$ видел все подбрасывания, начиная с i-ого.</p>
 <p>$\textrm{Николай}_1$ видел первое подбрасывание, а потом ушел, $\textrm{Николай}_2$ видел первое и второе подбрасывание, а потом ушел и т.д. То есть $\textrm{Николай}_i$ видел все подбрасывания до i-ого включительно, а остальные не видел.</p>
 <p>Обозначим $\sigma$- алгебру i-ого Петра $\mathcal{F}_i$, а $\sigma$-алгебру i-ого Николая $\mathcal{H}_i$.</p>
@@ -13234,26 +13200,8 @@ $$\Omega = \{\omega_1, \ldots, \omega_n\}$$</p>
 <p>4) Сравнить $\mathcal{F}_{100}$ и $\mathcal{F}_{200}$</p>
 <p>5) В какие $\sigma$-алгебры входят следующие события</p>
 <ul>
-<li><p>$A_1$</p>
-</li>
-<li><p>${A}_{40}$</p>
-</li>
-<li><p>$A_1 \cup A_{40}$</p>
-</li>
-<li><p>$A_1 \cap A_{40}$</p>
-</li>
-<li><p>$\bigcup_{i=1}^{\infty} A_i$</p>
-</li>
-<li><p>$\bigcap_{i=1}^{\infty} A_i$</p>
-</li>
-<li><p>$A_1 \cap \overline{A}_{57}$</p>
-</li>
-<li><p>$\bigcup_{i=40}^{\infty} A_i$</p>
-</li>
-<li><p>$\bigcup_{i=1}^{\infty} \big(\bigcap_{j=i}^{\infty} A_j \big)$</p>
-</li>
-<li><p>$\bigcap_{i=1}^{\infty} \big(\bigcup_{j=i}^{\infty} A_j \big)$</p>
-</li>
+<li>$A_1$, ${A}_{40}$, $A_1 \cup A_{40}$, $A_1 \cap A_{40}$, $\bigcup_{i=1}^{\infty} A_i$, 
+$\bigcap_{i=1}^{\infty} A_i$, $A_1 \cap \overline{A}_{57}$, $\bigcup_{i=40}^{\infty} A_i$, $\bigcup_{i=1}^{\infty} \big(\bigcap_{j=i}^{\infty} A_j \big)$, $\bigcap_{i=1}^{\infty} \big(\bigcup_{j=i}^{\infty} A_j \big)$ </li>
 </ul>
 
 </div>
@@ -13262,7 +13210,7 @@ $$\Omega = \{\omega_1, \ldots, \omega_n\}$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>4.</strong> В лесу есть три вида грибов: рыжики, лисички и мухоморы. Попадаются они равновероятно и независимо друг от друга. Маша нашла 100 грибов. Пусть $R$ — количество рыжиков, $L$ – количество лисичек, а $M$ — количество мухоморов среди этих трех грибов.</p>
+<p><strong>3.</strong> В лесу есть три вида грибов: рыжики, лисички и мухоморы. Попадаются они равновероятно и независимо друг от друга. Маша нашла 100 грибов. Пусть $R$ — количество рыжиков, $L$ – количество лисичек, а $M$ — количество мухоморов среди этих трех грибов.</p>
 <p>а) Сколько элементов $\sigma(R)$?</p>
 <p>б) Сколько элементов $\sigma(R,M)$?</p>
 <p>в) Измерима ли $L$ относительно $\sigma(R)$?</p>
