add new task for prac3

--- a/prac03/prac03.html
+++ b/prac03/prac03.html
@@ -13188,7 +13188,33 @@ $$\Omega = \{\omega_1, \ldots, \omega_n\}$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>2.</strong> В ходе эксперимента монетку подбрасывают бесконечное число раз. Пусть событие $A_i$ - в i-ом подбрасывании выпал орел ($i=1,2,\ldots$). Имеются два типа наблюдателей, $\textrm{Петры}$ и $\textrm{Николаи}$.</p>
+<p><strong>2.</strong> Правильный тетраэдр (1,2,3,4) подбрасывается 3 раза.</p>
+<ul>
+<li>Постройте сигма-алгебру данной игры. </li>
+<li>Постройте сигма-алгебру, если мы знаем, что первый раз выпала 3-ка.</li>
+<li>Постройте сигма-алгебру, если мы знаем, что первый раз выпала 3-ка, а третий раз нечетное число.</li>
+</ul>
+<p>Задайте какую-нибудт меру на данной сигма алгебре.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>3.</strong> В единичный квадрат вписан круг. На квадрат произвольно бросают точки. Построить сигма-алгебру данной игры.</p>
+<ul>
+<li>Найти вероятность того, что ровно $k$ точек попала в круг.</li>
+<li>Найти вероятность того, что ровно $k$ точек попала в круг, если первая точка точно попала в круг.</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>4.</strong> В ходе эксперимента монетку подбрасывают бесконечное число раз. Пусть событие $A_i$ - в i-ом подбрасывании выпал орел ($i=1,2,\ldots$). Имеются два типа наблюдателей, $\textrm{Петры}$ и $\textrm{Николаи}$.</p>
 <p>$\textrm{Петр}_1$ видел все подбрасывания, начиная с первого, $\textrm{Петр}_2$ видел все подбрасывания, начиная со второго и тд. То есть $\textrm{Петр}_i$ видел все подбрасывания, начиная с i-ого.</p>
 <p>$\textrm{Николай}_1$ видел первое подбрасывание, а потом ушел, $\textrm{Николай}_2$ видел первое и второе подбрасывание, а потом ушел и т.д. То есть $\textrm{Николай}_i$ видел все подбрасывания до i-ого включительно, а остальные не видел.</p>
 <p>Обозначим $\sigma$- алгебру i-ого Петра $\mathcal{F}_i$, а $\sigma$-алгебру i-ого Николая $\mathcal{H}_i$.</p>
