--- a/prac03/prac03.html
+++ b/prac03/prac03.html
@@ -13327,6 +13327,15 @@ $\bigcap_{i=1}^{\infty} A_i$, $A_1 \cap \overline{A}_{57}$, $\bigcup_{i=40}^{\in
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>1. (1 балл)</strong> Докажите, формулы включения-исключения исходя из определения вероятностной меры.</p>
+<p>Для любого конечного набора событий имеет место формула:</p>
+$$P(A_1 \cup \dots \cup A_n) = \sum_{i=1}^{n}P(A_i) - \sum_{i&lt;j}P(A_iA_j) + \ldots + (-1)^{n-1}P(A_1\ldots A_n)$$
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>1. (2 балла)</strong>
 Пусть $(\Omega,\mathcal{F},P)$ -- вероятностное пространство, $A_1,\ldots, A_n,\ldots\in\mathcal{F}$. Для $J\subset \{1,\ldots n\}$ положим
     $$\mathcal{P}_1(J)\triangleq \sum_{i\in J}P(A_i), $$
