change 4 and 5 practice

--- a/prac03/prac03.html
+++ b/prac03/prac03.html
@@ -13153,7 +13153,7 @@ $$\Omega = \{\omega_1, \ldots, \omega_n\}$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>На самом деле, некоторые пункты в данном определении можно опустить, так как другие пункты так же их учитывают. Минимальные требования, при которых определение остается корректным:</p>
+<p>На самом деле, некоторые пункты в данном определении можно опустить, так как другие пункты их учитывают. Минимальные требования, при которых определение остается корректным:</p>
 
 </div>
 </div>
@@ -13252,7 +13252,11 @@ $\bigcap_{i=1}^{\infty} A_i$, $A_1 \cap \overline{A}_{57}$, $\bigcup_{i=40}^{\in
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>1. (1 балл)</strong> Показать, что алгебра, порожденная системой $\{A_1,\ldots, A_n\}$, где $A_i\subset\Omega$, $i = 1,\ldots, n$ состоит из $2^{2^n}$ элементов.</p>
+<p><strong>1. (2 балл)</strong></p>
+<ul>
+<li>(1) Доказать, что верхний предел алгебры, порожденной системой $\{A_1,\ldots, A_n\}$, где $A_i\subset\Omega$, $i = 1,\ldots, n$ состоит из $2^{2^n}$ элементов. </li>
+<li>(+1) Найти пример системы множеств, когда это не так.</li>
+</ul>
 
 </div>
 </div>
